Layout bugfix.
Fixed a bug where the home page logo was being overlapped by bottom part due to a smaller screen height. Logo now scales from a percentage of the bottom of the window size.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ body{
    margin-top:30%;
    text-align: left;
    margin-bottom:3%;
+   bottom: 20%;
 
 }
 
@@ -93,6 +94,7 @@ body{
     color: #422878;
     padding-top:1%;
     text-align: center;
+    bottom: 20%;
   }
 
   
@@ -625,11 +627,6 @@ s
 
 @media screen and (max-height: 720px) {
 
-    .logo{
-
-        margin-top:20%;
-     }
-
      .pdf{
 
         width: 700px;
@@ -1064,12 +1061,21 @@ s
 
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 770px) {
 
     .logo{
 
-        position: absolute;
-        margin-left: 5%;
-        margin-top: 15%;
+        position: relative;
+        margin-left: 55%;
+     }
+}
+
+@media screen and (max-height: 750px) {
+
+    .logo{
+
+        position: fixed;
+        margin-left: 55%;
+        bottom: 20%;
      }
 }
